rewrote cmd system, time for bed
commands no longer use the run() method, instead they use the super cool brigadier LiteralArgumentBuilder